...
    //MARK: - Properties
    
    let blackModalButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.backgroundColor = .black
        button.setTitle("Black Modal", for: .normal)
        return button
    }()
    
    let blueModalButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.backgroundColor = .blue
        button.setTitle("Blue Modal", for: .normal)
        return button
    }()
    
    
    let modalView = SPModal()
    
...
